test/negative/t19.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : y:int -> int -> int[@@gospel {| r = f ~y y|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : y:int -> int -> int
(*@ r = f ~y y
     *)
File "t19.mli", line 12, characters 10-11:
Error: Variable y is duplicated in pattern
